Turn off overlays for rotated video.

Previously, WMPI checked the video rotation and didn't enable
overlays if it was nonzero.  During the switch to AndroidOverlay,
this is now the decoder's job.  This CL tells MCVD to do that.

Bug: 847338
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Ic76c91db1dd37e7e4160e5e7a17e2951b000884b
Reviewed-on: https://chromium-review.googlesource.com/1085691
Reviewed-by: Thomas Guilbert <tguilbert@chromium.org>
Commit-Queue: Frank Liberato <liberato@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564766}
Former-commit-id: 6827e41808073f132794bcff63a8efcc99e68691